8.2.0 (19-11-2021)
- Improvement: Throw exception when create a person customer to a person already with person customer
- Bug Fix: Only write ingressionType if it is set in the registration
- Refactor: Handler for settlement note payment, equal to declared in AcademicTreasuryBridgeImpl
- New Fixture: Reservation taxes, which can discount amount from tuition debts
- Improvement: Allow set interest type in AcademicTreasuryTargetCreateDebtBuilder
- Bug Fix: Get execution year name from treasury event target
- Refactor: Predicates in TreasuryEvent to check if it is related with tuition debts, and if the event discount on tuition total amount
- Refactor: Handle settlement note payment to HandleSettlementNotePayment class



8.1.1 (09-11-2021)
- Bug Fix: Align headers in debt reports

8.1.0 (25-10-2021)
- Improvement: Add method to find academic custom debt AcademicTreasuryEvent 
- Improvement: Change API of academic debt builder to receive the required DateTime when parameter

8.0.4 (24-09-2021)
- Bug Fix: Refer to extracurricular tuition group when creating infered tuition for extra curricular course, instead of standalone tuition group

8.0.3 (16-09-2021)
- Improvement: Add date to key of description of custom calculator in Tuition payment plan 
- Improvement: In standalone and extracurricular tuitions, save the custom calculation description in debit entry instead of academic treasury event
- Bug Fix: In Treasury Bridge API, if there is not finantial entity associated to a degree return null as debt account

8.0.2 (29-07-2021)
- Improvement: Close debit notes academic debt generation rule allow close of interests (#UL-IGOT-1129)
- Improvement: Add document observations & terms and conditions to be exported in debt report beans

8.0.1 (27-07-2021)
- Bug Fix: Error on copy of plans, invisible fields not are deleted
- Bug Fix: Reverted deletion of  PaymentPenaltySettings and PaymentPenaltyEventTarget (#UL-ISEG-1757)

8.0.0 (26-07-2021)